
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;


 int memcpy (int *,int *,int) ;
 int strlen (int *) ;

int ff_addstr(u_char *in, u_char *out) {
    int len;

    len = strlen(in);
    *out++ = len;
    memcpy(out, in, len);
    return(len + 1);
}
